2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_push_selected): Remove "push_fn" argument (use
	GC_push_all directly); update the documentation; reformat the
	comment.
	* mark.c (GC_push_conditional): Simplify the code (for better
	readability).

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (alloc_mark_stack): Use FALSE/TRUE (instead of 0/1) for
	boolean local variables.
	* doc/README.macros (GC_PREFER_MPROTECT_VDB): Update.
	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty,
	GC_remove_protection): Define for GWW_VDB and PROC_VDB in a single
	place.
	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty): Compute
	PHT_HASH(h) only once (store result to a local variable).

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.solaris2: Update.

2011-05-19  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)

	* include/private/gcconfig.h (end, InitStackBottom): Declare
	extern variable for RTEMS.
	* include/private/gcconfig.h (DATASTART, DATAEND, STACKBOTTOM):
	Update (for RTEMS).
	* include/private/gcconfig.h (DATAEND): Fix a typo in the macro
	name (for RTEMS).
	* tests/test.c (CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER):
	Replace with CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER (for RTEMS).

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Enable for Solaris in
	single-threaded environment.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Undefine if PROC_VDB.
	* tests/test.c (NUMBER_ROUND_UP): New macro.
	* tests/test.c (check_heap_stats): Round up total expected heap
	size to the nearest 4 MiB bound.
	* tests/test.c (check_heap_stats): Print the current and expected
	heap sizes in case of failure.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* checksums.c (GC_check_blocks, GC_check_dirty): Do log printing
	only if GC_print_stats; print errors using GC_err_printf.
	* checksums.c (GC_check_blocks): Join adjacent printf() calls into
	a single one.
